force-app/main/default/objects/Swap_Message__c/Swap_Message__c.object-meta.xml
<CustomObject>
    <label>Swap Message</label>
    <nameField>
        <displayFormat>MSG-{00000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swap Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>