force-app/main/default/objects/Swap_Message__c/fields/Is_System_Message__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Message</label>
    <type>Checkbox</type>
</CustomField>