force-app/main/default/objects/Swap_Message__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <referenceTo>Swap_Request__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>